<resources>
    <string name="app_name">Warehouse</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="title_stats">Statistics</string>
    <string name="item_name">Product watch Name</string>
    <string name="model_no">Watch serial number</string>
    <string name="price_pcs">Price / pcs</string>
    <string name="quantity">Quantity</string>
    <string name="shelf_no">Watch Brand</string>
    <string name="supplier_code">Supplier code</string>
    <string name="supplier_phone">Supplier phone</string>
    <string name="quick_sell">QUICK SELL</string>
    <string name="editor_insert_successful">Product saved</string>
    <string name="editor_insert_failed">Error with saving an item</string>
    <string name="nothing_in_the_warehouse_now">Nothing in the warehouse now…</string>
    <string name="get_started_by_adding_a_product">Get started by adding a product</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="edit_an_item">Edit an item</string>
    <string name="field_required">This field is required</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete">Delete</string>
    <string name="editor_delete_successful">Item deleted</string>
    <string name="editor_delete_failed">Error with deleting an item</string>
    <string name="delete_dialog_msg">Delete this item from warehouse?</string>
    <string name="no_more_items">No more items left on stock!</string>
    <string name="not_enough_items">Not enough items on stock!</string>
    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>
    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
    <string name="search_instructions">Search by product name or model</string>
    <string name="search">Search</string>

    <!-- Statistics related strings -->
    <string name="goods_on_stock">Goods on stock:</string>
    <string name="total_stock_value">Total stock value:</string>
    <string name="supplier_count">Supplier count:</string>
    <string name="out_of_stock">Out of stock:</string>
    <string name="loading_stats_failed">Error with loading stats</string>
    <string name="getting_data_stats">Getting data stats…</string>
    <plurals name="models">
        <item quantity="one">%d model</item>
        <item quantity="other">%d models</item>
    </plurals>

    <!-- Settings related strings -->
    <string name="delete_all_items_title">Delete all the items</string>
    <string name="delete_all_items_msg">Are you sure you want to perform this action? All the data will be lost!</string>
    <string name="delete_all_items_successful">The data was deleted</string>
    <string name="delete_all_items_failed">Error with deleting the data</string>
    <string name="warning">Warning!</string>
    <string name="settings_max_quantity">Stock capacity in pcs</string>
    <string name="settings_max_quantity_key" translatable="false">pref_max_quantity</string>
    <string name="settings_max_quantity_default">10000</string>
    <string name="settings_max_quantity_error">Please choose number up to 999999 pcs!</string>
    <string name="settings_currency">Currency for prices</string>
    <string name="settings_currency_custom">Custom currency</string>
    <string name="settings_currency_key" translatable="false">pref_currency</string>
    <string name="settings_currency_key_custom" translatable="false">pref_currency_custom</string>
    <string name="settings_currency_EUR" translatable="false">EUR</string>
    <string name="settings_currency_USD" translatable="false">USD</string>
    <string name="settings_currency_JPY" translatable="false">JPY</string>
    <string name="settings_currency_GBP" translatable="false">GBP</string>
    <string name="settings_currency_custom_title">Custom</string>
    <string name="settings_credits">Credits ©</string>
    <string name="settings_credits_no_symbol">Credits</string>
    <string name="settings_credits_key" translatable="false">pref_credits</string>
    <string name="credits_summary">Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" title="Creative Commons BY 3.0">CC 3.0 BY</a></string>
    <string name="settings_step">Step of quantity increase</string>
    <string name="settings_step_key" translatable="false">pref_step</string>
    <string name="settings_step_default">1</string>
    <string name="settings_delete_all_key">delete_everything_key</string>
    <string name="trash">Trash</string>
    <string name="settings_export_csv">Export inventory data to CSV</string>
    <string name="settings_export_csv_key" translatable="false">pref_export</string>

    <!-- Pin code related strings -->
    <string name="pin_welcome">Please set a pin code to enable the advanced settings. If you are using this app for commercial purposes, ask your supervisor to create the pin. Only an authorized person should have access to this pin code.</string>
    <string name="pin_secret_key">6fH4489W5t8Go6CDE3h98S5HP</string>
    <string name="pin_input_error">Please enter a four-digit PIN code!</string>
    <string name="pin_re_enter">Please re-enter your PIN code!</string>
    <string name="pin_no_match">PIN codes do not match!</string>
    <string name="pin_saved">PIN code successfully saved!\n\nPin code does not fully protect against data loss. Never give your phone to anyone you do not implicitly trust.</string>
    <string name="pin_please">Advanced settings! Please enter a PIN code to continue.</string>
    <string name="pin_incorrect">Entered PIN code is not correct!</string>

    <!-- Excel export related strings -->
    <string name="storage_not_granted">Storage permissions not granted</string>
    <string name="export_successfull">Database exported successfully!</string>
    <string name="export_failed">Failed to export data</string>
    <string name="export_subject">Inventory table in .csv format</string>
    <string name="export_send">Send file via e-mail</string>
    <string name="export_dialog">Would you like to save the inventory data to a CSV file?</string>

</resources>
