<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/large_padding_60dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/search_instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/double_grid_material_design_16dp"
        android:text="@string/search_instructions"
        android:textSize="@dimen/font_subtitle_18sp" />

    <ListView
        android:id="@+id/warehouse_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Empty view START -->
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/empty"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/empty_view_image"
            android:layout_width="@dimen/layout_width_small_108dp"
            android:layout_height="@dimen/layout_width_small_108dp"
            android:src="@drawable/logistics_delivery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_in_the_warehouse_now"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started_by_adding_a_product" />

    </LinearLayout>
    <!-- Empty view END -->

    <!-- Dummy view to remove an empty view if no products were found via search -->
    <View
        android:id="@+id/invisible_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>